Refactoring Cannon class a bit